label for select language

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -75,6 +75,7 @@
     },
     "language": {
         "spanish": "Spanish",
-        "english": "English"
+        "english": "English",
+        "language": "Language:"
     }
 }
