--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -75,6 +75,7 @@
     },
     "language": {
         "spanish": "Español",
-        "english": "Inglés"
+        "english": "Inglés",
+        "language": "Idioma:"
     }
 }
